[gd_scene load_steps=11 format=3 uid="uid://bfqb3eleg2xy5"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_7227i"]
[ext_resource type="PackedScene" uid="uid://8554216mvq1o" path="res://scenes/player.tscn" id="1_b3q83"]
[ext_resource type="PackedScene" uid="uid://fewcvrn02vuo" path="res://scenes/mob.tscn" id="2_x47ps"]
[ext_resource type="Theme" uid="uid://dt7dkt1jmc7jr" path="res://ui_theme.tres" id="4_x8i1c"]
[ext_resource type="Script" path="res://scripts/score_label.gd" id="5_y5ver"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g2436"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_i1ttv"]
size = Vector3(60, 2, 60)

[sub_resource type="CylinderMesh" id="CylinderMesh_xrstm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5368k"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="Curve3D" id="Curve3D_3xj7f"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 12.6891, 0, -13.6407, 0, 0, 0, 0, 0, 0, 12.6189, 0, 13.8177, 0, 0, 0, 0, 0, 0, -12.6624, 0, 13.8177, 0, 0, 0, 0, 0, 0, -12.7327, 0, -13.6407, 0, 0, 0, 0, 0, 0, 12.6891, 0, -13.6407),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_7227i")
mob_scene = ExtResource("2_x47ps")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_g2436")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_i1ttv")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.769344, 0.638835, 0, -0.638835, 0.769344, 0, 14.8264, 20.1162)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_b3q83")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0

[node name="Cylinders" type="Node3D" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.7201, 0, -13.6594)
mesh = SubResource("CylinderMesh_xrstm")
surface_material_override/0 = SubResource("StandardMaterial3D_5368k")

[node name="MeshInstance2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.6394, 0, 13.7745)
mesh = SubResource("CylinderMesh_xrstm")
surface_material_override/0 = SubResource("StandardMaterial3D_5368k")

[node name="MeshInstance3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.72, 0, -13.6598)
mesh = SubResource("CylinderMesh_xrstm")
surface_material_override/0 = SubResource("StandardMaterial3D_5368k")

[node name="MeshInstance4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.639, 0, 13.774)
mesh = SubResource("CylinderMesh_xrstm")
surface_material_override/0 = SubResource("StandardMaterial3D_5368k")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_3xj7f")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.999997, 0, -0.00255749, 0, 1, 0, 0.00255749, 0, 0.999997, 12.6891, 0, -13.6407)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 32.0
offset_top = 27.0
offset_right = 93.0
offset_bottom = 53.0
theme = ExtResource("4_x8i1c")
text = "Score: 0"
script = ExtResource("5_y5ver")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_x8i1c")
text = "Press Enter to Retry"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
